content/docs/v2020.10.30/reference/azurerm.kubeform.com/SearchService.md
---
title: SearchService
menu:
  docs_v2020.10.30:
    identifier: searchservice-azurerm.kubeform.com
    name: SearchService
    parent: azurerm.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## SearchService
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `azurerm.kubeform.com/v1alpha1` |
|    `kind` | string | `SearchService` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[SearchServiceSpec](#searchservicespec)***||
| `status` | ***[SearchServiceStatus](#searchservicestatus)***||
## Phase(`string` alias)

Appears on:[SearchServiceStatus](#searchservicestatus)

## SearchServiceSpec

Appears on:[SearchService](#searchservice), [SearchServiceStatus](#searchservicestatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `location` | ***string***||
| `name` | ***string***||
| `partitionCount` | ***int64***| ***(Optional)*** |
| `primaryKey` | ***string***| ***(Optional)*** |
| `queryKeys` | ***[[]SearchServiceSpecQueryKeys](#searchservicespecquerykeys)***| ***(Optional)*** |
| `replicaCount` | ***int64***| ***(Optional)*** |
| `resourceGroupName` | ***string***||
| `secondaryKey` | ***string***| ***(Optional)*** |
| `sku` | ***string***||
| `tags` | ***map[string]string***| ***(Optional)*** |
## SearchServiceSpecQueryKeys

Appears on:[SearchServiceSpec](#searchservicespec)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `key` | ***string***| ***(Optional)*** |
| `name` | ***string***| ***(Optional)*** |
## SearchServiceStatus

Appears on:[SearchService](#searchservice)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[SearchServiceSpec](#searchservicespec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
---
